# CardReader

./: CMakeLists.txt  CardReader.qmlproject  CardReader.qmlproject.qtds  main.cpp  qds.cmake
App/: main.cpp
App/autogen/: environment.h
CardReader/: CMakeLists.txt  Constants.qml  qmldir
CardReader/designer/: plugin.metainfo
CardReaderContent/: App.qml  CMakeLists.txt  MenuScreen.ui.qml  Screen01.ui.qml
include/: BankDatabase.h  CardParser.h  QSerialConnection.h
src/: BankDatabase.cpp  CardParser.cpp  QSerialConnection.cpp
